--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
     <footer>
         - Lennier Mulder, Lowell Class of '27
 
-        <div class"badges">
+        <p>Buttons!</p>
+        <div class="88x31">
             <!-- Anything But Windows -->
-            <img alt="Anything But Window Badge" title="F*** microsoft" src="https://leia.pages.gay/img/badges/anythingbutwindows.gif">
+            <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
 
             <!-- uBlock Origin NOW -->
             <a title="uBlock Origin NOW" referrerpolicy="no-referrer" href="https://github.com/gorhill/uBlock">
-                <img alt="uBlock Origin Badge" src="https://leia.pages.gay/img/badges/ublock.png">
+                <img alt="uBlock Origin Badge" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ublock.png">
             </a>
 
             <!-- Firefox NOW -->
             <a title="Firefox NOW" referrerpolicy="no-referrer" href="https://firefox.com">
-                <img alt="Firefox Badge" src="https://leia.pages.gay/img/badges/firefox.png">
+                <img alt="Firefox Badge" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/firefox.png">
             </a>
 
             <!-- Anything but chrome -->
-            <img src="https://raw.githubusercontent.com/Kirito139/Stash/refs/heads/main/88x31/chrome.png" alt="Anything but chrome">
+            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome.png" alt="Anything but chrome">
+            </a>
 
             <!-- LaTeX -->
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/latex.gif" alt="True nerds type in LaTeX">
@@ -40,7 +43,111 @@
             <a title="textfile directory" referrerpolicy="no-referrer" href="http://textfiles.com">
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/textfile.gif" alt="textfiles.com">
             </a>
+
+            <!-- Questionable Content -->
+            <a title="Questionable Content" referrerpolicy="no-referrer" href="https://www.questionablecontent.net">
+                <img style="width: 88px; height: 31px;" src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Tokyo_Teahouse_2932_buttons_questionablecontent.gif" alt="Questionable Content">
+            </a>
+
+            <!-- Calvin & Hobbes -->
+            <img style="width: 88px; height: 31px;" src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/claymatecarly_calvin.gif" alt="Calvin & Hobbes">
+
+            <!-- Vim -->
+            <a title="Vim" referrerpolicy="no-referrer" href="https://www.vim.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/vim.vialle.love.anim.gif" alt="Vim">
+            </a>
+
+            <!-- Fight Google -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/google_stand.gif" alt="Fight Google">
+
+            <!-- DHMO -->
+            <a title="DHMO" referrerpolicy="no-referrer" href="https://dhmo.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/dhmobanner1.gif" alt="DHMO">
+            </a>
+
+            <!-- Star Wars Fanatic -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Area51_Cavern_3008_swfanatic.gif" alt="Star Wars!">
+
+            <!-- Atheist -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Area51_Cavern_1263_tna3.gif" alt="Atheist">
+
+            <!-- Internet Archive -->
+            <a title="Internet Archive" referrerpolicy="no-referrer" href="https://archive.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/preserve.gif" alt="archive.org">
+            </a>
+
+            <!-- Made on a Mac -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/macbutton.gif" alt="Made on a Mac">
+
+            <!-- It just works -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/mac-works.gif" alt="It just works">
+
+            <!-- css -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/css.gif" alt="css">
+
+            <!-- Made with Macintosh -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/41383.gif" alt="Made with Macintosh">
+
+            <!-- 88x31 -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/88x31.png" alt="88x31">
+
+            <!-- chrome is evil -->
+            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome2.gif" alt="Google Chrome is EVIL!">
+            </a>
+
+            <!-- get a computer now -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/computer.png" alt="Get a computer NOW!">
+
+            <!-- DOOM -->
+            <a title="DOOM" referrerpolicy="no-referrer" href="https://playclassic.games/games/first-person-shooter-dos-games-online/play-doom-online/play/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/doom.png" alt="Play DOOM!">
+            </a>
+
+            <!-- Best viewed with eyes -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/eyes.gif" alt="Best viewed with eyes!">
+
+            <!-- I like computer -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ilikecomputer.png" alt="I like computer">
+
+            <!-- Internet archive -->
+            <a title="Internet Archive" referrerpolicy="no-referrer" href="https://archive.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/internetarchive.png" alt="Internet Archive">
+            </a>
+
+            <!-- Internet privacy NOW! -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/internetprivacy.gif" alt="Internet privacy NOW!">
+
+            <!-- phone chump -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/phonechump.gif" alt="Don't be a phone chump. Get a computer NOW!">
+
+            <!-- ruffle -->
+            <a title="Ruffle" referrerpolicy="no-referrer" href="https://ruffle.rs">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ruffle.png" alt="Ruffle">
+            </a>
+
+            <!--  same shit different asshole -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/sameshit.gif" alt="Same shit different asshole">
+
+            <!-- spotify -->
+            <a title="Reasons apple music is better" referrerpolicy="no-referrer" href="https://techpenny.com/reasons-apple-music-better-than-spotify/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/shitify.gif" alt="Get Apple Music instead!">
+            </a>
+
+            <!-- delete tiktok -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tiktok.gif" alt="Delete tiktok">
+
+            <!-- Windows NO! -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/windows.png" alt="Windows NO!">
+
+            <!-- xkcd -->
+            <a title="xkcd" referrerpolicy="no-referrer" href="https://xkcd.com">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/xkcd.png" alt="xkcd">
+            </a>
+
         </div>
+        <p>© 2024 Lennier Mulder · <a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a>
+        </p>
     </footer>
 </body>
 </html>
